--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -3,23 +3,19 @@ name: Build and Push Docker Image
 on:
   workflow_call:
     inputs:
-      imageName:
+      image-name:
         type: string
         default: ${{ github.repository }}
         description: "The name for the docker image (Default: Repository name)"
-      imageTag:
-        type: string
-        required: true
-        description: "The tag for the docker image (usually a version tag without leading 'v')"
-      dockerFile:
+      docker-file:
         type: string
         default: Dockerfile
         description: "The path to the Dockerfile (Default: ./Dockerfile)"
-      dockerContext:
+      docker-context:
         type: string
         default: .
         description: "The context for the Docker build (Default: .)"
-      buildArgs:
+      build-args:
         type: string
         description: "List of additional build contexts (e.g., name=path)"
         required: false
@@ -27,17 +23,20 @@ on:
         type: string
         description: "List of platforms for which to build the image"
         default: linux/amd64,linux/arm64
+      registry:
+        type: string
+        default: ghcr.io
+        description: "The registry to push the image to (Default: ghcr.io)"
       
     secrets:
-      registryUser:
+      registry-user:
         required: true
-      registryPassword:
+      registry-password:
         required: true
-
 
 jobs:
   build:
-    name: Build Docker Image for ${{ inputs.imageTag }}
+    name: Build Docker Image for ${{ inputs.image-name }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -56,16 +55,27 @@ jobs:
       - name: Log in to the Container registry
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
-          username: ${{ secrets.registryUser }}
-          password: ${{ secrets.registryPassword }}
+          registry: ${{ inputs.registry }}
+          username: ${{ secrets.registry-user || github.actor }}
+          password: ${{ secrets.registry-password || secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ inputs.registry }}/${{ inputs.image-name }}
+          tags: |
+            type=raw,value=latest,enable={{is_default_branch}}
+            type=ref,event=branch
+            type=ref,event=pr
 
       - name: Build and push Docker Image
         uses: docker/build-push-action@v5
         with:
-          context: ${{ inputs.dockerContext }}
-          file: ${{ inputs.dockerFile }}
+          context: ${{ inputs.docker-context }}
+          file: ${{ inputs.docker-file }}
           platforms: ${{ inputs.platforms }}
-          tags: "${{ inputs.imageName }}:${{ inputs.imageTag }}"
-          build-args: ${{ inputs.buildArgs }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          build-args: ${{ inputs.build-args }}
           push: true
