Make registry user and password optional

--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -30,9 +30,9 @@ on:
       
     secrets:
       registry-user:
-        required: true
+        required: false
       registry-password:
-        required: true
+        required: false
 
 jobs:
   build:
