--- a/.github/build-and-push-docker/action.yml
+++ b/.github/build-and-push-docker/action.yml
@@ -27,7 +27,7 @@ inputs:
     default: ${{ github.actor }}
     description: "The username for the registry"
   registry-password:
-    default: ${{ secrets.GITHUB_TOKEN }}
+    default: ${{ github.token }}
     description: "The password for the registry"
 
 runs:
