--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -45,7 +45,7 @@ on:
 jobs:
   build:
     name: Build Docker Image for ${{ inputs.image-name }}
-    runs-on: ubuntu-latest
+    runs-on: ase-large-ubuntu
     steps:
       - name: Checkout
         uses: actions/checkout@v4
