--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -63,6 +63,8 @@ jobs:
   
       - name: Install Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          driver-opts: "network=${{ inputs.network }}"
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
