--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -65,6 +65,10 @@ jobs:
         uses: docker/setup-buildx-action@v3
         with:
           driver-opts: "network=${{ inputs.network }}"
+          config-inline: |
+            [registry."docker.io"]
+              mirrors = ["https://your.mirror.url"]
+
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
