Fix copy and paste error

--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -67,7 +67,7 @@ jobs:
           driver-opts: "network=${{ inputs.network }}"
           buildkitd-config-inline: |
             [registry."docker.io"]
-              mirrors = ["https://your.mirror.url"]
+              mirrors = ["https://docker-mirror.ase.in.tum.de:8765"]
 
 
       - name: Log in to the Container registry
