--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -68,6 +68,8 @@ jobs:
             type=raw,value=latest,enable={{is_default_branch}}
             type=ref,event=branch
             type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=sha,prefix=,format=long
 
       - name: Build and push Docker Image
         uses: docker/build-push-action@v6
