--- a/.github/workflows/native-build-and-push-docker-image.yml
+++ b/.github/workflows/native-build-and-push-docker-image.yml
@@ -106,11 +106,16 @@ jobs:
     needs:
       - build
     steps:
+      - name: Prepare
+        run: |
+          image="${{ inputs.image-name }}"
+          echo "IMAGE_NAME=${image//\//-}" >> $GITHUB_ENV
+
       - name: Download digests
         uses: actions/download-artifact@v4
         with:
           path: ${{ runner.temp }}/digests
-          pattern: digests-*
+          pattern: digests-${{ env.IMAGE_NAME }}-*
           merge-multiple: true
 
       - name: Login to GHCR
