Add output declare to job

--- a/.github/workflows/native-build-and-push-docker-image.yml
+++ b/.github/workflows/native-build-and-push-docker-image.yml
@@ -107,6 +107,8 @@ jobs:
 
   merge:
     runs-on: ubuntu-latest
+    outputs: 
+      image_tag: ${{ steps.meta.outputs.image_tag }}
     needs:
       - build
     steps:
