--- a/.github/workflows/deploy-docker-compose.yml
+++ b/.github/workflows/deploy-docker-compose.yml
@@ -12,11 +12,7 @@ on:
         type: string
         default: "./compose.yaml"
         description: "Path to the Docker Compose file (Default: ./compose.yaml)"
-      
-      remove-volumes:
-        type: boolean
-        default: false
-        description: "Remove named volumes declared in the 'volumes' section of the Compose file and anonymous volumes attached to containers"
+        required: true
       
       main-image-name:
         type: string
@@ -26,6 +22,7 @@ on:
       image-tag:
         type: string
         description: "Image tag to deploy (default: pr-<number> if PR exists, latest for default branch)"
+        required: true
       
       env-file-name:
         type: string
@@ -38,6 +35,12 @@ on:
       env-secrets-and-variables:
         type: string
         description: "Additional environment secrets/variables in KEY=VALUE format, separated by newlines. Use GitHub secrets for sensitive data since they will get automatically censored in the logs"
+        required: false
+      
+      remove-volumes:
+        type: boolean
+        default: false
+        description: "Remove named volumes declared in the 'volumes' section of the Compose file and anonymous volumes attached to containers"
         required: false
 
 jobs:
