prevent nesting of docker file

--- a/.github/workflows/deploy-docker-compose.yml
+++ b/.github/workflows/deploy-docker-compose.yml
@@ -135,6 +135,13 @@ jobs:
               echo "$COMPOSE_FILE does not exist. Skipping docker compose down."
             fi
 
+      - name: Extract basename of docker-compose-file
+        id: extract_basename
+        run: |
+          BASENAME=$(basename "${{ inputs.docker-compose-file }}")
+          echo "basename=$BASENAME" >> $GITHUB_OUTPUT
+        shell: bash
+
       - name: Copy docker compose file to VM host
         uses: appleboy/scp-action@v0.1.7
         with:
@@ -146,7 +153,7 @@ jobs:
           proxy_key: ${{ secrets.DEPLOYMENT_GATEWAY_SSH_KEY }}
           proxy_port: ${{ vars.DEPLOYMENT_GATEWAY_PORT }}
           source: ${{ inputs.docker-compose-file }}
-          target: /home/${{ vars.VM_USERNAME }}
+          target: /home/${{ vars.VM_USERNAME }}/${{ steps.extract_basename.outputs.basename }}
 
       - name: SSH to VM and create ${{ inputs.env-file-name }} file
         uses: appleboy/ssh-action@v1.0.3
