--- a/.github/workflows/deploy-docker-compose.yml
+++ b/.github/workflows/deploy-docker-compose.yml
@@ -110,6 +110,9 @@ jobs:
         run: |
           BASENAME=$(basename "${{ inputs.docker-compose-file }}")
           echo "basename=$BASENAME" >> $GITHUB_OUTPUT
+
+          # Copy the file to the base directory
+          cp "${{ inputs.docker-compose-file }}" "$BASENAME"
         shell: bash
 
       - name: SSH to VM and execute docker compose down (if exists)
@@ -152,8 +155,7 @@ jobs:
           proxy_username: ${{ vars.DEPLOYMENT_GATEWAY_USER }}
           proxy_key: ${{ secrets.DEPLOYMENT_GATEWAY_SSH_KEY }}
           proxy_port: ${{ vars.DEPLOYMENT_GATEWAY_PORT }}
-          source: ${{ inputs.docker-compose-file }}
-          strip_components: 10 # Removes the first 10 leading path components from the source path
+          source: ${{ steps.extract_basename.outputs.basename }}
           target: /home/${{ vars.VM_USERNAME }}
 
       - name: SSH to VM and create ${{ inputs.env-file-name }} file
