--- a/.github/workflows/deploy-docker-compose.yml
+++ b/.github/workflows/deploy-docker-compose.yml
@@ -173,8 +173,8 @@ jobs:
 
             echo "ENVIRONMENT=${{ inputs.environment }}" > ${{ inputs.env-file-name }}
             echo "IMAGE_TAG=${{ needs.prepare-deploy.outputs.image-tag-to-deploy }}" >> ${{ inputs.env-file-name }}
-            if [ "${{ inputs.env-vars }}" != "" ]; then
-              echo "${{ inputs.env-vars }}" >> ${{ inputs.env-file-name }}
+            if [ "${{ inputs.env-secrets-and-variables }}" != "" ]; then
+              echo "${{ inputs.env-secrets-and-variables }}" >> ${{ inputs.env-file-name }}
             fi
 
       - name: SSH to VM and execute docker compose up
