--- a/.github/workflows/deploy-docker-compose.yml
+++ b/.github/workflows/deploy-docker-compose.yml
@@ -177,13 +177,19 @@ jobs:
           script: |
             #!/bin/bash
             set -e  # Exit immediately if a command exits with a non-zero status
-      
+
+            # Update package lists and install jq if not present
+            if ! command -v jq &> /dev/null; then
+              echo "jq not found. Installing jq..."
+              sudo apt-get update && sudo apt-get install -y jq
+            fi
+
             # Define the environment file path
             ENV_FILE="${{ inputs.env-file-name }}"
-      
+
             # Create or empty the environment file
             > "$ENV_FILE"
-      
+
             # Write static environment variables
             echo "ENVIRONMENT=${{ inputs.environment }}" >> "$ENV_FILE"
             echo "IMAGE_TAG=${{ needs.prepare-deploy.outputs.image-tag-to-deploy }}" >> "$ENV_FILE"
@@ -199,12 +205,18 @@ jobs:
             if [ -n "${{ inputs.github-env-secret-names }}" ]; then
               IFS=$'\n' read -rd '' -a secret_names <<< "${{ inputs.github-env-secret-names }}"
               for secret in "${secret_names[@]}"; do
+                # Trim any leading/trailing whitespace
+                secret=$(echo "$secret" | xargs)
+                if [ -z "$secret" ]; then
+                  continue
+                fi
+
                 # Extract the secret value using jq
-                secret_value=$(echo "$GH_ENV_SECRETS" | jq -r --arg key "$secret" '.[$key]')
-                if [ "$secret_value" != "null" ]; then
+                secret_value=$(echo "$GH_ENV_SECRETS" | jq -r --arg key "$secret" '.[$key] // empty')
+                if [ -n "$secret_value" ]; then
                   append_env "$secret" "$secret_value"
                 else
-                  echo "Warning: Secret '$secret' not found in Github Environment Secrets."
+                  echo "Warning: Secret '$secret' not found in GH_ENV_SECRETS."
                 fi
               done
             fi
@@ -213,12 +225,18 @@ jobs:
             if [ -n "${{ inputs.github-env-variable-names }}" ]; then
               IFS=$'\n' read -rd '' -a var_names <<< "${{ inputs.github-env-variable-names }}"
               for var in "${var_names[@]}"; do
+                # Trim any leading/trailing whitespace
+                var=$(echo "$var" | xargs)
+                if [ -z "$var" ]; then
+                  continue
+                fi
+
                 # Extract the variable value using jq
-                var_value=$(echo "$GH_ENV_VARS" | jq -r --arg key "$var" '.[$key]')
-                if [ "$var_value" != "null" ]; then
+                var_value=$(echo "$GH_ENV_VARS" | jq -r --arg key "$var" '.[$key] // empty')
+                if [ -n "$var_value" ]; then
                   append_env "$var" "$var_value"
                 else
-                  echo "Warning: Variable '$var' not found in Github Environment Variables."
+                  echo "Warning: Variable '$var' not found in GH_ENV_VARS."
                 fi
               done
             fi
